src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__o.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 15,
        "id": {
          "end": 3,
          "name": "six",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 15,
          "left": {
            "end": 11,
            "left": {
              "end": 7,
              "raw": "1",
              "start": 6,
              "type": "Literal",
              "type": "Literal",
              "value": 1.0
            },
            "operator": "+",
            "right": {
              "end": 11,
              "raw": "2",
              "start": 10,
              "type": "Literal",
              "type": "Literal",
              "value": 2.0
            },
            "start": 6,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "operator": "+",
          "right": {
            "end": 15,
            "raw": "3",
            "start": 14,
            "type": "Literal",
            "type": "Literal",
            "value": 3.0
          },
          "start": 6,
          "type": "BinaryExpression",
          "type": "BinaryExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 15,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 15,
  "start": 0
}
