src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__p.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3948
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 22,
          "id": {
            "end": 10,
            "name": "five",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "end": 22,
            "left": {
              "end": 18,
              "left": {
                "end": 14,
                "raw": "3",
                "start": 13,
                "type": "Literal",
                "type": "Literal",
                "value": 3.0
              },
              "operator": "*",
              "right": {
                "end": 18,
                "raw": "1",
                "start": 17,
                "type": "Literal",
                "type": "Literal",
                "value": 1.0
              },
              "start": 13,
              "type": "BinaryExpression",
              "type": "BinaryExpression"
            },
            "operator": "+",
            "right": {
              "end": 22,
              "raw": "2",
              "start": 21,
              "type": "Literal",
              "type": "Literal",
              "value": 2.0
            },
            "start": 13,
            "type": "BinaryExpression",
            "type": "BinaryExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 22,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 22,
  "start": 0
}
