src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__r.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 20,
        "id": {
          "end": 3,
          "name": "obj",
          "start": 0,
          "type": "Identifier"
        },
        "init": {
          "end": 20,
          "properties": [
            {
              "end": 12,
              "key": {
                "end": 9,
                "name": "a",
                "start": 8,
                "type": "Identifier"
              },
              "start": 8,
              "type": "ObjectProperty",
              "value": {
                "end": 12,
                "raw": "1",
                "start": 11,
                "type": "Literal",
                "type": "Literal",
                "value": 1.0
              }
            },
            {
              "end": 18,
              "key": {
                "end": 15,
                "name": "b",
                "start": 14,
                "type": "Identifier"
              },
              "start": 14,
              "type": "ObjectProperty",
              "value": {
                "end": 18,
                "raw": "2",
                "start": 17,
                "type": "Literal",
                "type": "Literal",
                "value": 2.0
              }
            }
          ],
          "start": 6,
          "type": "ObjectExpression",
          "type": "ObjectExpression"
        },
        "start": 0,
        "type": "VariableDeclarator"
      },
      "end": 20,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    },
    {
      "declaration": {
        "end": 42,
        "id": {
          "end": 31,
          "name": "height",
          "start": 25,
          "type": "Identifier"
        },
        "init": {
          "computed": false,
          "end": 42,
          "object": {
            "end": 37,
            "name": "obj",
            "start": 34,
            "type": "Identifier",
            "type": "Identifier"
          },
          "property": {
            "end": 41,
            "raw": "\"a\"",
            "start": 38,
            "type": "Literal",
            "type": "Literal",
            "value": "a"
          },
          "start": 34,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "start": 25,
        "type": "VariableDeclarator"
      },
      "end": 42,
      "kind": "const",
      "start": 25,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 42,
  "start": 0
}
