src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__t.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 17,
        "id": {
          "end": 9,
          "name": "pt1",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "computed": true,
          "end": 17,
          "object": {
            "end": 14,
            "name": "b1",
            "start": 12,
            "type": "Identifier",
            "type": "Identifier"
          },
          "property": {
            "end": 16,
            "name": "x",
            "start": 15,
            "type": "Identifier",
            "type": "Identifier"
          },
          "start": 12,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 17,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 17,
  "start": 0
}
