src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__w.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 22,
        "id": {
          "end": 9,
          "name": "pt1",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "computed": false,
          "end": 22,
          "object": {
            "end": 14,
            "name": "b1",
            "start": 12,
            "type": "Identifier",
            "type": "Identifier"
          },
          "property": {
            "end": 21,
            "raw": "'zero'",
            "start": 15,
            "type": "Literal",
            "type": "Literal",
            "value": "zero"
          },
          "start": 12,
          "type": "MemberExpression",
          "type": "MemberExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 22,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 22,
  "start": 0
}
