src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__y.snap
---
source: kcl/src/parsing/parser.rs
expression: actual
---
{
  "body": [
    {
      "declaration": {
        "end": 29,
        "id": {
          "end": 8,
          "name": "sg",
          "start": 6,
          "type": "Identifier"
        },
        "init": {
          "arguments": [
            {
              "end": 28,
              "name": "pos",
              "start": 25,
              "type": "Identifier",
              "type": "Identifier"
            }
          ],
          "callee": {
            "end": 24,
            "name": "startSketchAt",
            "start": 11,
            "type": "Identifier"
          },
          "end": 29,
          "start": 11,
          "type": "CallExpression",
          "type": "CallExpression"
        },
        "start": 6,
        "type": "VariableDeclarator"
      },
      "end": 29,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 29,
  "start": 0
}
