src/wasm-lib/kcl/src/parsing/snapshots/kcl_lib__parsing__parser__snapshot_tests__z.snap
---
source: kcl/src/parsing/parser.rs
assertion_line: 3962
expression: actual
snapshot_kind: text
---
{
  "body": [
    {
      "declarations": [
        {
          "end": 53,
          "id": {
            "end": 8,
            "name": "sg",
            "start": 6,
            "type": "Identifier"
          },
          "init": {
            "body": [
              {
                "arguments": [
                  {
                    "end": 28,
                    "name": "pos",
                    "start": 25,
                    "type": "Identifier",
                    "type": "Identifier"
                  }
                ],
                "callee": {
                  "end": 24,
                  "name": "startSketchAt",
                  "start": 11,
                  "type": "Identifier"
                },
                "end": 29,
                "start": 11,
                "type": "CallExpression",
                "type": "CallExpression"
              },
              {
                "arguments": [
                  {
                    "elements": [
                      {
                        "end": 40,
                        "raw": "0",
                        "start": 39,
                        "type": "Literal",
                        "type": "Literal",
                        "value": 0.0
                      },
                      {
                        "argument": {
                          "end": 48,
                          "name": "scale",
                          "start": 43,
                          "type": "Identifier",
                          "type": "Identifier"
                        },
                        "end": 48,
                        "operator": "-",
                        "start": 42,
                        "type": "UnaryExpression",
                        "type": "UnaryExpression"
                      }
                    ],
                    "end": 49,
                    "start": 38,
                    "type": "ArrayExpression",
                    "type": "ArrayExpression"
                  },
                  {
                    "end": 52,
                    "start": 51,
                    "type": "PipeSubstitution",
                    "type": "PipeSubstitution"
                  }
                ],
                "callee": {
                  "end": 37,
                  "name": "line",
                  "start": 33,
                  "type": "Identifier"
                },
                "end": 53,
                "start": 33,
                "type": "CallExpression",
                "type": "CallExpression"
              }
            ],
            "end": 53,
            "start": 11,
            "type": "PipeExpression",
            "type": "PipeExpression"
          },
          "start": 6,
          "type": "VariableDeclarator"
        }
      ],
      "end": 53,
      "kind": "const",
      "start": 0,
      "type": "VariableDeclaration",
      "type": "VariableDeclaration"
    }
  ],
  "end": 53,
  "start": 0
}
